# pyapi-client

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  tox.ini
.semaphore/: create-release.yml  semaphore.yml
docs/: index.md  requirements.txt
example/: client.py
pyapi/client/: __init__.py  spec.py  validation.py  wrappers.py
release-notes/: 0.2.0.md  0.3.0.md  0.3.1.md
tests/: application.py  conftest.py  openapi.json  test_client.py
